boulder/tests/compile_fail/match/expr_ty.bo
# Mismatched types
# found `u32`
# expected `u16`
# (9:

fn test(a: Empty | u32) -> u16 {
    match a {
        x: Empty -> 16,
        x: u32 -> x,
    }
}